[package]
name = "test_task"
version = "0.1.0"
edition = "2021"

[dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
sui_sdk = { git = "https://github.com/mystenlabs/sui.git", package = "sui-sdk"}
sui_config = { git = "https://github.com/mystenlabs/sui.git", package = "sui-config"}
sui_keys = { git = "https://github.com/mystenlabs/sui.git", package = "sui-keys"}
shared_crypto = { git = "https://github.com/mystenlabs/sui.git", package = "shared-crypto"}
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
bcs = "0.1.6"
rand = "0.8.5"
